# Cstar-Autos

./: CMakeLists.txt  README.md
programs/: CMakeLists.txt  generate_autos.cc
src/: auxiliary.hh
src/algebra/: CMakeLists.txt  SGPair.hh  SRSet.hh  digraph.cc  digraph.hh  ringmatrix.hh
src/automaton/: CMakeLists.txt  DFA.cc  DFA.hh  HK-nfa.cc  HKC-nfa.cc  HKC-nfa.hh  NFA.cc  NFA.hh
src/output/: CMakeLists.txt  output.hh  permutation_graph.cc  permutation_graph.hh
src/shiftspace_auto/: CMakeLists.txt  invertibility.cc  invertibility.hh  permutation_dual.hh  permutation_graph.cc  permutation_graph.hh  permutative_autos_fast.hh  permutative_autos_simple.hh  synchronizer.cc  synchronizer.hh
src/wordgraph/: CMakeLists.txt  WordGraph.hh  WordGraph128.cc  WordGraph128.hh  WordGraph64.cc  WordGraph64.hh  WordGraphFull.cc  WordGraphFull.hh  WordGraphLR.cc  WordGraphLR.hh
